--- a/sysContable-war/web/index.xhtml
+++ b/sysContable-war/web/index.xhtml
@@ -7,12 +7,12 @@
         <title>SysContable</title>
         <link rel="icon" type="image/jpg" href="./resources/imagenes/img.jpg"></link>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <h:outputStylesheet library="css" name="genStilos.css" />
-        <h:outputScript library="js" name="script.js" />
+        <h:outputStylesheet library="css" name="pruebaNuevo.css" />
+        <h:outputScript library="js" name="validaciones.js" />
         <h:outputScript library="js" name="index.js" />
     </h:head>
     <h:body>
-        <ui:include src="menu.xhtml" />
+        <ui:include src="menu2.xhtml" />
     </h:body>
 </html>
 
