--- a/sysContable-war/web/login.xhtml
+++ b/sysContable-war/web/login.xhtml
@@ -26,7 +26,7 @@
         <h:form>
             <p:dialog id="busc" 
                       header="Informacion" 
-                      widgetVar="dlg1"
+                      widgetVar="dlgMensajes"
                       width="70%" height="40%"
                       modal="true"
                       >
