--- a/sysContable-war/web/seguridad/MttModulos.xhtml
+++ b/sysContable-war/web/seguridad/MttModulos.xhtml
@@ -143,7 +143,7 @@
         <!--dialogo para los msj-->
         <p:dialog id="busc" 
                   header="Informacion" 
-                  widgetVar="dlg1"
+                  widgetVar="dlgMensajes"
                   width="70%" height="40%"
                   modal="true"
                   >
