--- a/sysContable-war/web/login.xhtml
+++ b/sysContable-war/web/login.xhtml
@@ -7,7 +7,7 @@
         <meta charset="UTF-8"></meta>
         <title>SysContable</title>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <h:outputStylesheet library="css" name="login.css" />
+        <h:outputStylesheet library="css" name="inicio.css" />
         <h:outputStylesheet name="primefaces-nova-light/theme.css" />
     </h:head>
     <h:body>
