--- a/sysContable-war/web/mantenimiento/RefresEntity.xhtml
+++ b/sysContable-war/web/mantenimiento/RefresEntity.xhtml
@@ -10,6 +10,7 @@
     </h:head>
     <h:body>
         <h:form id="form">
+            <h1 class="estilo-titulo">Mantenimiento de entidades</h1>
             <p:tabView dynamic="true">
                 <p:tab title="Mantenimiento" >
                     <p:panelGrid>
