--- a/sysContable-war/web/seguridad/MttModulos.xhtml
+++ b/sysContable-war/web/seguridad/MttModulos.xhtml
@@ -32,8 +32,7 @@
                     </p:menubar>
 
                     <p:panelGrid  id="pnModulos" columns="4" layout="grid" 
-                                  styleClass="showcase-text-align-left"
-                                   columnClasses="ui-g-lg-12 ui-g-md-12 ui-g-sm-6 ui-g-xs-6" >
+                                  styleClass="panel-stilo">
                         <p:outputLabel for="txtNomMod" value="Nombre" />
                         <p:inputText id="txtNomMod" value="#{mttenimientoModulos.nomModulo}"
                                      onkeypress="return validarSoloLetras(event)"/>
