--- a/sysContable-war/web/seguridad/MttMenus.xhtml
+++ b/sysContable-war/web/seguridad/MttMenus.xhtml
@@ -60,8 +60,7 @@
                         <div class="ui-g-xs-12 ui-g-sm-8 ui-g-md-8 ui-g-lg-8">
                             <p:panel id="detalleMttMenu" style="width: 100% !important; max-width: 100%;">
                                 <p:panelGrid columns="2" layout="grid" 
-                                             styleClass="showcase-text-align-left"
-                                             columnClasses="ui-g-12 ui-md-4 ui-lg-4">
+                                             styleClass="panel-stilo">
                                     <p:outputLabel for="textNomModulo" value="Modulo" />
                                     <p:selectOneMenu id="textNomModulo" value="#{mttMenu.itemCodModulo}" >
                                         <p:ajax listener="#{mttMenu.obtenerPantallas()}" update="textNomPantalla textNombrePadre" />
