--- a/sysContable-war/web/seguridad/MttMenusXPerfiles.xhtml
+++ b/sysContable-war/web/seguridad/MttMenusXPerfiles.xhtml
@@ -1,12 +1,43 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+<html  xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:h="http://xmlns.jcp.org/jsf/html"
+       xmlns:p="http://primefaces.org/ui"
+       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:form>
+            <h5>Responsive Grid</h5>
+            <div class="p-grid">
+                <div class="p-col">
+                    <p:panel header="prueba" styleClass="custom-panel-header">
+                        <h:outputText value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                                      His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
+                                      Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+                                      kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family." />
+                    </p:panel>
+                </div>
+                <div class="p-col">
+                    <p:panel header="Godfather">
+                        <h:outputText value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                                      His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
+                                      Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+                                      kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family." />
+                    </p:panel>
+                </div>
+                <div class="p-col">
+                    <p:panel header="Godfather">
+                        <h:outputText value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                                      His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
+                                      Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+                                      kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family." />
+                    </p:panel>
+                </div>
+            </div>
+        </h:form>
+
     </h:body>
 </html>
 
